Fixed the stop button not showing in videos with long titles

--- a/web/css/youtubeSexy.css
+++ b/web/css/youtubeSexy.css
@@ -269,6 +269,9 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  width: 400px;
+  float: left;
+  padding: 1px 1px 0;
 }
 
 .filled {
